--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,18 @@ th {
 .remove-btn:hover {
   background: #990000;
 }
+
+footer {
+  margin-top: 40px;
+  text-align: center;
+  color: #555;
+}
+
+footer a {
+  color: #0077cc;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
